--- a/Ankha.html
+++ b/Ankha.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Ankha30x Mi Primera Commit y Arreglos js</title>
+    <title>Ankha30x Mi Primera Commit</title>
 <script src="./Ankha.js"></script>
 </head>
 <body>
